--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,6 @@ jobs:
       - name: Run hello world
         run: |
           echo "Running PR code"
-          echo $FLAG
+          env
         env:
           SECRET_TOKEN: ${{ secrets.FLAG }}
